Fix notification spacing

--- a/admin/less/admin.less
+++ b/admin/less/admin.less
@@ -493,6 +493,10 @@ input + .notify {
 			visibility: hidden;
 		}
 	}
+
+	&:last-child {
+		margin-bottom: 0;
+	}
 }
 
 #top-buttons {
